# scholar

./: Cargo.toml  LICENSE  README.md
examples/: files.rs  iris.csv  iris.rs  save_load.rs  serialize.rs  xor.rs
src/: dataset.rs  lib.rs  net.rs  network.rs  utils.rs
