[package]
name = "scholar"
version = "0.1.0"
authors = ["Thomas Freeman <tomclaudefreeman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1"
derive-new = "0.5"
indicatif = "0.14"
nalgebra = "0.21"
rand = "0.7"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
