[package]
name = "scholar"
version = "0.1.7"
authors = ["Thomas Freeman <tomclaudefreeman@gmail.com>"]
edition = "2018"
description = "A supervised machine learning library."
repository = "https://github.com/thfm/scholar"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
csv = "1"
indicatif = "0.14"
nalgebra = { version = "0.21", features = ["serde-serialize"] }
rand = "0.7"
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
anyhow = "1"
